--- a/index.html
+++ b/index.html
@@ -29,6 +29,47 @@
             </div>
         </div>
     </section>
+
+    <section id="info">
+        <h2>Some random information.</h2>
+        <div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="frase">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it`s just filling up space, or maybe people will actually read it. Who knows? All l know is that it looks nice.</p>
+        <p>Thor, God of Thunder</p>
+    </section>
+
+    <section>
+        <div id="cartelito">
+            <div>
+                <h3>Call to action! It`s time!</h3>
+                <p> Sign up for our product by cliking that button right over there!</p>
+            </div>
+            <button>Sign Up</button>
+        </div>
+    </section>
+
+    <footer id="footer">
+        <p>Copyright ©  The Odin Proyect 2021</p>
+    </footer>
     
 </body>
 </html>
