html completo y estilos del inicio

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <section id="inicio">
         <nav>
-            <a href="#inicio">Header Logo</a>
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link third</li>
+            <a href="#inicio" id="header-logo">Header Logo</a>
+            <ul id="header-link">
+                <li><a class="header-link">header link one</a></li>
+                <li><a class="header-link">header link two</a></li>
+                <li><a class="header-link">header link third</a></li>
             </ul>
         </nav>
         <div>
             <div>
                 <h1>This website is awesome</h1>
                 <p>
-                    This website has some subtext that goes here under the main title. It´s a smaller font and the color is lower contrast
+                    This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast
                 </p>
                 <button>Sign up</button>
             </div>
