estilos de titulo

--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 <body>
     <section id="inicio">
         <nav>
-            <a href="#inicio" id="header-logo">Header Logo</a>
+            <a href="#inicio" id="header-logo"><span>Header Logo</span></a>
             <ul id="header-link">
                 <li><a class="header-link">header link one</a></li>
                 <li><a class="header-link">header link two</a></li>
                 <li><a class="header-link">header link third</a></li>
             </ul>
         </nav>
-        <div>
-            <div>
-                <h1>This website is awesome</h1>
+        <div id="inicio-container">
+            <div id="div-titulo">
+                <h1 id="titulo">This website is awesome</h1>
                 <p>
                     This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast
                 </p>
                 <button>Sign up</button>
             </div>
-            <div>
-                <p>this is a placeholder for an image</p>
+            <div id="image">
+                <p id="text-img">this is a placeholder for an image</p>
             </div>
         </div>
     </section>
