--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div id="inicio-container">
             <div id="div-titulo">
                 <h1 id="titulo">This website is awesome</h1>
-                <p>
+                <p id="parrafo-titulo">
                     This website has some subtext that goes here under the main title. It`s a smaller font and the color is lower contrast
                 </p>
-                <button>Sign up</button>
+                <button class="btn">Sign up</button>
             </div>
             <div id="image">
                 <p id="text-img">this is a placeholder for an image</p>
@@ -31,7 +31,7 @@
     </section>
 
     <section id="info">
-        <h2>Some random information.</h2>
+        <h2 id="info-titulo">Some random information.</h2>
         <div>
             <div>
                 <div></div>
