--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
 
     <section id="info">
         <h2 id="info-titulo">Some random information.</h2>
-        <div>
-            <div>
-                <div></div>
+        <div id="div-info">
+            <div class="div-info-cajas">
+                <div class="caja-div"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <div></div>
+            <div class="div-info-cajas">
+                <div class="caja-div"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <div></div>
+            <div class="div-info-cajas">
+                <div class="caja-div"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            <div>
-                <div></div>
+            <div class="div-info-cajas">
+                <div class="caja-div"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
