--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     </section>
 
     <section id="frase">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it`s just filling up space, or maybe people will actually read it. Who knows? All l know is that it looks nice.</p>
-        <p>Thor, God of Thunder</p>
+        <p id="frase-parrafo">This is an inspiring quote, or a testimonial from a customer. Maybe it`s just filling up space, or maybe people will actually read it. Who knows? All l know is that it looks nice.</p>
+        <p id="autor">-Thor, God of Thunder</p>
     </section>
 
     <section>
