--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <p id="autor">-Thor, God of Thunder</p>
     </section>
 
-    <section>
+    <section id="catelito-sec">
         <div id="cartelito">
-            <div>
+            <div class="texto-sign">
                 <h3>Call to action! It`s time!</h3>
                 <p> Sign up for our product by cliking that button right over there!</p>
             </div>
-            <button>Sign Up</button>
+            <div id="span-btn"><button id="btn-cartel" class="btn">Sign Up</button></div>
         </div>
     </section>
 
