--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
             <a href="#inicio" id="header-logo"><span>Header Logo</span></a>
             <ul id="header-link">
-                <li><a class="header-link">header link one</a></li>
-                <li><a class="header-link">header link two</a></li>
-                <li><a class="header-link">header link third</a></li>
+                <li><a href="#" class="header-link item anim">header link one</a></li>
+                <li><a href="#" class="header-link item anim">header link two</a></li>
+                <li><a href="#" class="header-link item anim">header link third</a></li>
             </ul>
         </nav>
         <div id="inicio-container">
